--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 <section id="page"
 				 data-controller="page"
 				 data-page-target="page"
-				 class="md:border is-animated mb-24 md:w-4/12 md:mt-12 mx-auto overflow-hidden md:pb-5 md:rounded-2xl md:shadow-2xl sm:container space-y-2">
+				 class="min-h-screen md:border is-animated mb-24 md:w-4/12 md:mt-12 mx-auto overflow-hidden md:pb-5 md:rounded-2xl md:shadow-2xl sm:container space-y-2">
 	<%= notice %>
 
 	<div class="bg-gray-100 flex md:bg-auto px-5 py-5 text-gray-800">
