--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -5,15 +5,15 @@
 				<span class="font-display ml-4 mr-2 text-2xl text-brand-500">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
-				<div class="flex text-gray-800">
-					<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->Calendar#prev_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-brand-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+				<div class="flex text-gray-800 pt-2 pr-2">
+					<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:bg-brand-500 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 focus:ring-offset-brand-200 focus:text-white h-8 items-center justify-center md:hover:bg-brand-500 md:hover:text-white mx-1 rounded-full w-8' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
 						</svg>
 					<% end %>
 
-					<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->Calendar#next_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-brand-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+					<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:bg-brand-500 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 focus:ring-offset-brand-200 focus:text-white h-8 items-center justify-center md:hover:bg-brand-500 md:hover:text-white mx-1 rounded-full w-8' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
