--- a/web/app/views/users/agenda.html.erb
+++ b/web/app/views/users/agenda.html.erb
@@ -1,6 +1,6 @@
 <% content_for :top_app_bar_title, 'Minha agenda' %>
 <% content_for :back_button, true %>
 
-<section data-controller="page" data-page-target="page" class="pt-2 mx-auto is-animated lg:w-9/12 md:mt-20 sm:container">
+<section data-controller="page" data-page-target="page" class="pt-2 mx-auto is-animated lg:w-9/12 md:mt-20 sm:container min-h-screen">
 	<%= render CalendarComponent.new(events: @liked_events, start_date: @start_date, user: current_user, filter: @filter, indicators: @indicators) %>
 </section>
