--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -14,8 +14,9 @@
 			<% unless params[:day] %>
 				<div class="select-none tap-highlight-none flex flex-col flex-col-reverse gap-4 items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 md:px-5 mx-5 pr-16" style="min-height: 252px;">
 					<div>
-						<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">Aproveite a cidade de Porto
-							Alegre</h2>
+						<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
+							Aproveite Porto Alegre
+						</h2>
 						<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
   						Aprendemos o que você gosta e não gosta para te sugerir eventos e atividades que vão
   					de lazer a educação. Assim, você descobre coisas novas e não perde o que já conhece.
