Show likes when hover in desktop

--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, id: dom_id(@event, :'main-sidebar'), data: { controller: 'main-sidebar--horizontal-event', 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'transition-opacity' do %>
+<%= content_tag :div, id: dom_id(@event, :'main-sidebar'), data: { controller: 'main-sidebar--horizontal-event', 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'transition-opacity group' do %>
 	<div class="select-none tap-highlight-none bg-white flex justify-between mx-2 md:mx-0 px-3 md:px-5 py-3 rounded-lg">
 		<div class="pr-5 md:pr-6">
 			<%= content_tag :a,
@@ -8,15 +8,15 @@
 												action:                  'click->main-sidebar--horizontal-event#openEvent',
 												'event-id':              @event.id
 											},
-											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-800 inline-block' do %>
+											class: 'font-semibold md:hover:text-brand-500 mb-1 leading-snug text-gray-800 inline-block' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-1 text-gray-500">
 				<%= helpers.format_hour @event.start_time %>h ·
 				<%= @event.categories_primary_name.titleize %> ·
-				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
+				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:underline' %>
 			</div>
-			<div class="flex mt-1 mt-3 space-x-2">
+			<div class="flex md:group-hover:opacity-100 md:opacity-0 transition-opacity duration-150 mt-1 mt-3 space-x-2">
 				<%= content_tag :div,
 												id:    dom_id(@event, :like),
 												data:  {
