--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -56,6 +56,7 @@
  ]
 }
 
+
 </script>
 
 <script type="application/ld+json">
@@ -97,6 +98,7 @@
     "validFrom": "<%= @event.ld_json.valid_from %>"
   }
 }
+
 </script>
 
 <%= render Modal::SignInComponent.new(text: nil) %>
@@ -119,9 +121,9 @@
 	<div class="md:col-span-8">
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
-	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
+	<div class="md:col-span-4 md:mb-0 mt-5 md:mt-0 space-y-8">
 		<% if will_happen? @event %>
-			<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
+			<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
 				<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 					<div>Abrir no facebook</div>
 					<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -152,7 +154,7 @@
 			</div>
 		<% end %>
 
-		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100 mb-8 p-5 space-y-3">
+		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100 p-5 space-y-3">
 			<h2 class="font-bold font-display text-xl text-gray-800 uppercase">Organizadores</h2>
 			<% @event.organizers.each do |organizer| %>
 				<%= link_to organizer_path(organizer), class: 'flex font-semibold items-center space-x-3' do %>
@@ -210,6 +212,20 @@
 				<% end %>
 			</div>
 		</div>
+
+		<%= link_to category_events_path(@event&.categories_primary_name), class: 'mx-5 md:mx-0 md:hover:bg-brand-600 bg-brand-500 inline-block cursor-pointer overflow-hidden bg-white rounded-lg md:rounded-xl md:shadow-2xl space-y-3' do %>
+			<div class="flex items-center justify-between p-5 pb-0 flex items-center justify-between">
+				<h2 class="font-bold font-display rounded-lg text-white text-xl">
+					<%= @event&.categories_primary_name&.titleize %>
+				</h2>
+				<svg xmlns="http://www.w3.org/2000/svg" class="stroke-current text-white w-6" fill="none" viewBox="0 0 24 24">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+				</svg>
+			</div>
+			<div class="pb-5 px-5 text-white">
+				Ver todos os eventos da categoria <%= @event&.categories_primary_name %> em Porto Alegre
+			</div>
+		<% end %>
 	</div>
 
 	<div class="select-none tap-highlight-none fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-500 cursor-pointer md:hidden bg-gray-300">
