--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -59,7 +59,6 @@
 			<% end %>
 			</tbody>
 		</table>
-
 		<div id="calendar__list" data-left-sidebar--calendar-target="list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
 			<div class="<%= helpers.class_names('mt-3 flex items-center px-2 py-1 mx-auto text-sm font-semibold text-white bg-brand-500 rounded-full select-none w-content',
 																					'hidden': !@filter) %>">
@@ -78,7 +77,10 @@
 																								 'hidden': !@filter) do %>
 				Remover filtro
 			<% end %>
-			<%= render LeftSidebar::GroupByDayListComponent.new(events: @events, user: @user) if @events.present? %>
+
+			<div id="calendar__events" data-left-sidebar--calendar-target="events" class="pb-10">
+				<%= render LeftSidebar::GroupByDayListComponent.new(events: @events, user: @user) if @events.present? %>
+			</div>
 
 			<% if @user && @events&.empty? && (@start_date != Date.today) %>
 				<div id="calendar__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
