--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -3,6 +3,8 @@
 		Filtros
 	</h2>
 	<% @categories.each do |category| %>
-		<%= link_to category, category_events_path(category), data: { 'turbo-preserve-scroll': true }, class: 'border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none text-gray-500 transform transition-colors transition-all w-content w-full' %>
+		<%= link_to category, category_events_path(category), data: { 'turbo-preserve-scroll': true }, class: helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content w-full',
+																																																															{ 'bg-brand-200 border-brand-200 text-brand-600': params[:category] == category,
+																																																																'text-gray-500':                                params[:category] != category }) %>
 	<% end %>
 <% end %>
