--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -47,8 +47,9 @@
 									<%= day.strftime '%e' %>
 								</div>
 							<% end %>
-							<div data-indicator class="<%= helpers.class_names 'h-1 mx-auto rounded-full transform translate-y-2 w-1 bg-brand-500',
-																																 'hidden': !@indicators&.include?(day) %>">
+							<% if @indicators&.include?(day) %>
+								<div data-indicator class="<%= helpers.class_names 'h-1 mx-auto rounded-full transform translate-y-2 w-1 bg-brand-500' %>">
+							<% end %>
 							</div>
 						<% end %>
 					<% end %>
@@ -68,7 +69,9 @@
 												id:    'calendar__clear-filter',
 												class: helpers.class_names('relative group bg-brand-200 cursor-pointer flex font-semibold h-content hover:bg-red-200 hover:text-red-700 items-center mt-3 mx-auto px-2 py-1 rounded-full select-none text-brand-700 text-sm w-content',
 																									 'hidden': !@filter) do %>
-					<div class="-translate-y-6 absolute duration-150 group-hover:opacity-100 opacity-0 pointer-events-none top-0 transform transition-opacity">Limpar filtro</div>
+					<div class="-translate-y-6 absolute duration-150 group-hover:opacity-100 opacity-0 pointer-events-none top-0 transform transition-opacity">Limpar
+						filtro
+					</div>
 					<svg class="fill-current mr-1 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
 						<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
 					</svg>
