--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -24,7 +24,7 @@
 			<div data-action="click->toggle-style#toggle click->go-to#url"
 					 data-toggle-style-target="toggle"
 					 data-toggle-style-identifier="feeds-index"
-					 data-go-to-url="<%= feed_path %>"
+					 data-go-to-url="<%= root_path %>"
 					 class="<%= class_string('border-b-2 border-brand-600 font-bold text-brand-600':                                                                                                 controller_name == 'feeds' && action_name == 'index',
 																	 'text-gray-800':                                                                                                                                        controller_name != 'feeds',
 																	 'tap-highlight-none outline-none pb-2 px-4 w-content cursor-pointer select-none transform transition-colors duration-200 hover:text-brand-500': true) %>">
