--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -30,7 +30,7 @@
 					<%= params[:category].titleize %>
 				</div>
 				<div class="flex items-center text-gray-700 md:hover:text-brand-500">
-					<%= link_to 'Ver todas as categorias', feed_path, class: '' %>
+					<%= link_to 'Ver todas as categorias', root_path, class: '' %>
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current ml-2 h-4">
 						<path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd" />
 					</svg>
