--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -3,7 +3,7 @@
 		<h2 class="block font-bold font-display mb-3 md:text-xl text-2xl text-gray-900">
 			Filtros
 		</h2>
-		<%= link_to feed_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-brand-200 items-baseline px-2 relative rounded-full text-brand-600' do %>
+		<%= link_to root_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-brand-200 items-baseline px-2 relative rounded-full text-brand-600' do %>
 			<svg class="fill-current mr-1 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
 				<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
 			</svg>
