Adjust hero text

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -18,7 +18,7 @@
 							Aproveite Porto Alegre
 						</h2>
 						<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
-  						Descubra novos eventos e siga seus locais e artistas favoritos para não perder nada que acontece.
+  						Descubra eventos e siga seus locais e artistas favoritos para não perder nada que acontece na cidade.
   					</span>
 					</div>
 					<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/skate.png", "hero/leitor-e-cao.png", "hero/passeando.png"].sample, class: 'md:w-auto md:h-auto my-auto w-32 h-32 md:-mt-6' %>
