Adjust style of calendar component

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -22,11 +22,11 @@
 	<!-- <div class="me-footer__vamodale">
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
 	</div> -->
-	<div class="me-footer__links">
-		<a class="manifesto" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
+	<div class="">
+		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
 			Sobre ·
 		</a>
-		<a rel="nofollow" href="/privacy">Política de privacidade</a> ·
-		<a rel="nofollow" href="/terms">Termos de serviço</a>
+		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/privacy">Política de privacidade</a> ·
+		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/terms">Termos de serviço</a>
 	</div>
 </section>
