--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -63,7 +63,7 @@
 		</div>
 
 
-		<div id="calendar__list" data-calendar-target="list" class="mb-20">
+		<div id="calendar__list" data-calendar-target="list">
 			<div class="<%= helpers.class_names('mb-1 bg-brand-500 flex font-semibold items-center mt-3 mx-auto px-3 py-2 rounded-full select-none text-sm text-white w-content',
 																					'hidden': !@filter) %>">
 				<svg class="h-5 mr-2 text-white fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -81,11 +81,15 @@
 																								 'hidden': !@filter) do %>
 				Remover filtro
 			<% end %>
-			<%= render Calendar::HorizontalEventComponent.with_collection(@events, user: @user) if @events.present? %>
+			<% if @events.present? %>
+				<div id="calendar__events" class="pb-20">
+					<%= render Calendar::HorizontalEventComponent.with_collection(@events, user: @user) %>
+				</div>
+			<% end %>
 		</div>
 
 		<% if @user && @events.empty? && (@start_date != Date.today) %>
-			<div id="calendar__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+			<div id="calendar__filter" class="text-sm text-center text-gray-600">
 				Sem eventos na sua agenda neste dia.
 				<%= content_tag :div, data: { reflex: 'click->Calendar#clear_filter' }, class: 'text-center cursor-pointer underline text-gray-500 text-sm' do %>
 					Remover filtro
@@ -96,7 +100,7 @@
 				Você não tem eventos salvos na sua agenda
 			</div>
 		<% elsif !@user %>
-			<div class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+			<div class="text-sm text-center text-gray-600">
 				<%= link_to 'Crie uma conta', new_user_registration_path, data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' }, class: 'underline text-brand-500 hover:text-gray-600' %>
 				para salvar seus eventos favoritos
 			</div>
