--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -13,7 +13,7 @@
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-1 text-gray-500">
 				<%= helpers.format_hour @event.start_time %>h ·
-				<%= link_to @event&.categories_primary_name&.titleize, category_events_path(@event.categories_primary_name), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
+				<%= link_to @event&.categories_display_name&.titleize, category_events_path(@event.categories_primary_name), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 				·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 			</div>
