--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -34,7 +34,7 @@
 					<% if params[:category] %>
 						<div class="flex items-center justify-between md:pr-10 pr-5">
 							<h2 class="font-bold font-display md:text-3xl pl-5 pt-3 text-gray-900 text-xl">
-								<span class="text-brand-500 underline"><%= params[:category].titleize %></span> em Porto Alegre
+								<span class="text-brand-500 underline"><%= @category&.details_display_name&.titleize %></span> em Porto Alegre
 							</h2>
 						</div>
 					<% else %>
@@ -53,7 +53,7 @@
 			<% else %>
 				<h2 class="mt-5 font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
 					Não foram encontrados eventos em Porto
-					Alegre <%= I18n.l params[:day].to_date if params[:day] %> <%= "na categoria #{params[:category]&.titleize}" if params[:category] %>
+					Alegre <%= I18n.l params[:day].to_date if params[:day] %> <%= "na categoria #{@category&.details_display_name&.titleize}" if params[:category] %>
 				</h2>
 			<% end %>
 			<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, open_in_sidebar: true) %>
